Clean up, move views to templates and rename slots to shifts to match current API

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -11,6 +11,6 @@
     <button class="button button-full button-balanced" ng-click="login()">
       Login
     </button>
-    <button class="button button-positive button-clear button-full" ui-sref="outside.register">Register now!</button>
+    <button class="button button-positive button-clear button-full" ui-sref="outside.howto">How to start</button>
   </ion-content>
 </ion-view>
