--- a/www/templates/shifts.html
+++ b/www/templates/shifts.html
@@ -7,20 +7,17 @@
   </ion-header-bar>
     <ion-content class="has-header">
       <ion-list can-swipe="true">
-        <ion-item ng-repeat="slot in slots">
-          <h2>{{slot.type}}</h2>
-          <p>{{slot.start}} - {{slot.end}}</p>
-          <p>{{slot.assigned}}</p>
-            <ion-option-button class="button-assertive" ng-click="toggleAssignment(slot._id)">
+        <ion-item ng-repeat="shift in shifts">
+          <h2>{{shift.type}}</h2>
+          <p>{{shift.start}} - {{shift.end}}</p>
+          <p>{{shift.assigned}}</p>
+            <ion-option-button class="button-assertive" ng-click="toggleAssignment(shift._id)">
               Assign
             </ion-option-button>
         </ion-item>
       </ion-list>
       <button class="button button-full button-assertive" ng-click="destroySession()">
         Destroy token
-      </button>
-      <button class="button button-full button-balanced" ng-click="getSlots()">
-        Get Memberinfo
       </button>
     </ion-content>
 </ion-view>
